2003-01-20 Damien Sandras  <dsandras@seconix.com>

	* src/config.cpp: Moved microtelco enable/disable changes from 
	config.cpp to pref_window.cpp (Update button clicked).

	* src/pref_window.cpp: See above.

	* configure.in: Version is now 0.96.0.
	
2003-01-20 Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schemas.in.in: Changed the user_input_capability type
	to int and fixed strings.
	
	* src/config.cpp: Fixed previous changes. Update the druid ixj page
	when microtelco is enabled.

	* src/endpoint.cpp: Changes related to the schema modification.

	* src/pref_window.cpp: See above.
	
2003-01-20  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: added Azeri (az), Latvian (lv) to ALL_LINGUAS

2003-01-20 Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schemas.in.in: Fixed string.
	
	* src/common.h: Removed unused widgets in the GmDruidWindow.
	
	* src/config.cpp: Added notifier. When the hostname changes,
	or the registering method, and when they become "non-mt", then
	disable "microtelco".
	
	* src/druid.cpp: Changed strings.
	
	* src/endpoint.cpp: Code cleanup.
	
	* src/gatekeeper.cpp: Set the registering method to 0 when the
	GK registering fails.
	
	* src/urlhandler.cpp: Add prefix when MicroTelco is used and
	G.723.1 is not found.
	
2003-01-15 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp: Removed automatic call clearing on no data
	received.
	
2003-01-14 Damien Sandras  <dsandras@seconix.com>

	* src/toolbar.cpp, src/config.cpp: Undo previous changes.
	
2003-01-14 Damien Sandras  <dsandras@seconix.com>

	* src/toolbar.cpp, src/config.cpp: Show/hide the speakerphone button
	if Quicknet is used/not used.
	
2003-01-14 Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schemas.in.in: Changed default max jitter to 500.

	* src/pref_window.cpp: Allow jitter to go to 2000 ms.
	
2003-01-14 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp: Fixed freeze bug when calling a second instance
	of GnomeMeeting.
