@@ -1,5 +1,12 @@
 2003-01-20 Damien Sandras  <dsandras@seconix.com>
 
+	* pref_window.cpp: When update button is clicked for the gatekeeper,
+	MicroTelco is automatically enabled/disabled like required.
+
+	* configure.in: Changed version to 0.96.0
+	
+2003-01-20 Damien Sandras  <dsandras@seconix.com>
+
 	* src/config.cpp: Moved microtelco enable/disable changes from 
 	config.cpp to pref_window.cpp (Update button clicked).
 
